test/typeerrors/Heuristics/NewNegationSimilar.hs
test1 :: Float
test1 = - 3.0

test2 :: Int
test2 = -. 3
